# zero-strike-portal

./: .gitignore  CLAUDE.md  README.md  ZeroStrike_Phase1_Architecture_and_Engineering_Plan.md
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/background/: tasks.py
backend/app/core/: config.py  deps.py  job_queue.py  logging.py  middleware.py  owasp.py  priority.py  rate_limit.py  retry.py  security.py  timeutils.py
backend/app/db/: mongo.py
backend/app/models/: ai_analysis_job.py  ai_finding_insight.py  ai_fix_proposal.py  ai_provider_config.py  ai_scan_insight.py  ai_usage_event.py  api_key.py  audit_log.py  finding.py  oauth_connection.py  project.py  project_member.py  project_repo.py  repo_credential.py  report.py  scan.py  (+3 more)
backend/scripts/: seed_dev_users.py
backend/tests/: conftest.py  test_admin_user_actions.py  test_ai_analysis_api.py  test_ai_analysis_service.py  test_ai_insight_models.py  test_ai_job_queue_service.py  test_ai_provider_config_api.py  test_ai_provider_config_service.py  test_api_key_auth.py  test_api_keys.py  test_audit_logs.py  test_auth_flow.py  test_change_password.py  test_cloud_scan_service.py  test_connections.py  test_dashboard_stats.py  test_downloads.py  test_email_service.py  test_forgot_password.py  test_llm_client.py  test_main.py  test_pdf_report.py  test_priority.py  test_project_members.py  test_project_repos.py  test_project_scan_activity.py  test_projects.py  test_public_repos.py  test_rate_limit.py  test_refresh_token_pruning.py  test_repo_credentials.py  test_repo_pat_adapters.py  test_report_ingestion.py  test_report_template_service.py  test_report_templates.py  test_scan_queue_service.py  test_scanner_endpoints.py  test_scanner_status.py  test_scans.py  test_seed_dev_users.py  (+1 more)
(+201 files in other folders)
