[project]
name = "zerostrike-portal-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "beanie>=1.27",
    "motor>=3.6",
    "python-jose[cryptography]>=3.3",
    "bcrypt>=4.1",
    "pydantic-settings>=2.6",
    "email-validator>=2.2",
    "structlog>=24.4",
    "python-multipart>=0.0.12",
]

[project.optional-dependencies]
dev = ["pytest>=8.3", "pytest-asyncio>=0.24", "httpx>=0.27", "mongomock-motor>=0.0.34", "ruff>=0.8"]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 110
target-version = "py312"
