[project]
name = "zerostrike-portal-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    # beanie>=2.1 calls database.client.append_metadata(...) on init, which motor
    # (deprecated by MongoDB as of 2026-05, no releases past 3.7.1) never learned to
    # wrap — crashes every real Mongo connection at startup. Bump past 2.1 only once
    # this stack has moved off motor onto pymongo's native async driver.
    "beanie>=1.27,<2.1",
    "motor>=3.6",
    "python-jose[cryptography]>=3.3",
    "bcrypt>=5.0.0",
    "pydantic-settings>=2.6",
    "email-validator>=2.2",
    "structlog>=24.4",
    "python-multipart>=0.0.12",
    "xhtml2pdf>=0.2.11",
    "jinja2>=3.1",
    "httpx>=0.27",
    "tenacity>=9.0",
    "litellm>=1.55",
]

[project.optional-dependencies]
dev = ["pytest>=8.3", "pytest-asyncio>=0.24", "mongomock-motor>=0.0.34", "ruff>=0.8"]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 110
target-version = "py312"
